<resources>
    <string name="app_name">Skinalyze</string>
    <string name="title_home">Skinalyze</string>
    <string name="title_history">History</string>
    <string name="title_product">Product</string>
    <string name="title_user">User</string>
    <string name="title_scan_history">Scan History</string>
    <string name="title_product_rekomendation">Product Recomendation</string>
    <string name="title_user_profile">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings">setting</string>
    <string name="logout_icon">Logout Menu</string>
    <string name="edit_profile_icon">Edit Menu</string>
    <string name="change_password_icon">Change Password Menu</string>
    <string name="settings_icon">Setting Menu</string>
    <string name="image_description_history">Image Description History</string>
    <string name="time_icon_history_description">time icon history description</string>
    <string name="calendar_icon_description">calendar icon description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="morning_reminder_icon">Morning Reminder Icon</string>
    <string name="night_reminder_icon">Night Reminder Icon</string>
    <string name="fragment_setting">Settings</string>

    // Ini bagian Folder Auth yaa
    <string name="welcome_back">Welcome Back</string>
    a
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="hey_there">Hey there,</string>
    <string name="create_account">Create an Account</string>
    <string name="your_name">Your Name</string>
    <string name="define_your_gender">Define your Gender (Male/Female)</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="privacy_policy">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="dont_have_account">Don’t have an account yet? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="phone_number">Handphone Number (08xxx)</string>
    <string name="analyze">Analyze</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze_button_string">Let\'s analyze your face!</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="skincare_reminder">Skincare Reminder</string>
    <string name="morning_reminder">Morning Reminder</string>
    <string name="_00_00">00:00</string>
    <string name="click_to_set_timer">Click to set timer</string>
    <string name="night_reminder">Night Reminder</string>
    <string name="username">Username</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
<<<<<<< HEAD
=======
    <string name="enter_new_pass">Enter Your New Password</string>
    <string name="apply">Apply Changes</string>
    <string name="back_to_user_profile">Back to User Profile</string>
>>>>>>> 1abe720 (piupiu)
    <string name="log_out">Log Out</string>
    <string name="feature">Feature</string>
    <string name="analyze_your_skin_here">Analyze your skin here</string>
    <string name="set_your_reminder_here">Set your reminder here</string>
    <string name="history">History</string>
    <string name="picture_face_upload">Picture Face Upload</string>
    <string name="category_tittle">Product Category</string>
    <string name="toproduct_button_string">Go to product page recomendation</string>
    <string name="Result">Result</string>
    <string name="diagnose">Diagnose</string>
<<<<<<< HEAD
=======

    <string name="update_profile">Update Profile</string>
    <string name="new_email">Insert Your New E-Mail</string>
    <string name="new_name">Insert Your New Name</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="fragment_change_password">Change Password</string>
    <string name="fragment_edit_profile">Edit Profile</string>

    <string name="enter_valid_pass">Please enter a valid password</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="error_updating_pass">Failed to update password. Try again.</string>
>>>>>>> 1abe720 (piupiu)

</resources>