<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <!-- Judul atau Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="?android:textColor"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="16dp" />

    <!-- TextInput untuk Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInput untuk Password Baru -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_pass"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tombol Reset Password -->
    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:backgroundTint="#5371D8"
        android:background="@drawable/button_rounded"
        android:layout_marginBottom="16dp" />

    <!-- Teks untuk Kembali ke Halaman Sign In -->
    <TextView
        android:id="@+id/tvBackToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_sign_in"
        android:textColor="#5371D8" />
</LinearLayout>
